# myshare

./: .cspell.json  .gitignore  .gitleaks.toml  .jscpd.json  .markdownlint-cli2.jsonc  .marksman.toml  .mcp.json  .n-cursor.json  .n-minify-image.tsv  .n-rules.json  .oxfmtrc.json  .oxlintrc.json  .trufflehog-exclude  .v8rignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  knip.json  package.json  vitest.config.js
.claude/: launch.json  settings.json
.claude/commands/: docs-regen.md  n-adr-normalize.md  n-brainstorming.md  n-coverage-fix.md  n-doc-files.md  n-fix-tests.md  n-fix.md  n-lint.md  n-llm-patch.md  n-publish-telegram.md  n-start-check.md  n-taze.md  n-worktree.md
.claude/hooks/: capture-decisions.sh  normalize-decisions.sh
.cursor/: hooks.json
.cursor/rules/: n-adr.mdc  n-bun.mdc  n-changelog.mdc  n-ci4.mdc  n-doc-files.mdc  n-docker.mdc  n-flow.mdc  n-ga.mdc  n-image-avif.mdc  n-image-compress.mdc  n-js-lint-ci.mdc  n-js-lint.mdc  n-js-run.mdc  n-js.mdc  n-k8s.mdc  n-local-ai.mdc  n-rust.mdc  n-security.mdc  n-style-lint.mdc  n-style.mdc  n-tauri.mdc  n-test.mdc  n-text.mdc  n-tool-surface.mdc  n-vue.mdc  vue.mdc
.github/: zizmor.yml
.github/workflows/: changelog-release.yml  clean-ga-workflows.yml  clean-merged-branch.yml  git-ai.yml  lint-ga.yml  lint-js.yml  lint-rust.yml  lint-security.yml  lint-style.yml  lint-text.yml  release.yml
.pi/extensions/: rtk.ts
app/: CHANGELOG.md  index.html  jsconfig.json  knip.json  package.json  stryker-vue-macros-ignorer.mjs  stryker.config.mjs  vite.config.js  vitest.config.js
app/.changes/: 1780406329689-1e1e10.md  1780406915219-6ca831.md  1780407490986-7e7b4a.md  1780408717774-88e1ee.md  1780409606064-88d3d0.md  1780643243949-6e6ad3.md  260703-0741.md  260703-1755.md  260704-0748.md  260705-2246.md  260705-2247.md  260706-0923.md  260712-2046.md  260719-1829.md  260719-1833.md  260722-0922.md
app/coverage/: lcov.info
app/docs/: index.md  stryker-vue-macros-ignorer.md  stryker.config.md  vite.config.md  vitest.config.md
app/src/: App.vue  caption-langs.js  caption-langs.test.js  link-store.js  link-store.test.js  main.js  model-pref.js  ollama.js  ollama.test.js  omlx.js  omlx.test.js  opfs.js  page-meta.js  page-meta.test.js  platform.js  platform.test.js  quasar-variables.sass  shared-url.js  shared-url.test.js  translation-cache.js  translation-cache.test.js  url-history.js  url-history.test.js  youtube.js  youtube.test.js
app/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: mutants.toml
app/src-tauri/capabilities/: default.json  updater.json
app/src-tauri/docs/: build.md  index.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  youtube.rs
app/src-tauri/src/docs/: index.md  lib.md  main.md  youtube.md
app/test/: happy-dom.preload.js
docs/: glossary.md
docs/.docgen/: config.yaml  manifest.json
docs/adr/: 20260528-133024-структура-документації-на-основі-n-ci4-mdc.md  20260528-133151-структура-документації-n-ci4.md  20260528-133151-структура-документації-на-основі-n-ci4-mdc-з-міграцією-readm.md  20260528-133414-url-history-localstorage.md  20260528-133414-збереження-отриманих-url-у-localstorage-як-масив-url-history.md  20260528-133659-структура-документації-на-основі-n-ci4-з-міграцією-readme.md  20260528-140441-структура-документації-на-основі-n-ci4-mdc-із-міграцією-read.md  20260528-164603-структура-документації-за-arc42-ditaxis.md  20260602-162030-статус-субтитрів-youtube-через-supadata-availablelangs-local.md  20260602-162030-статус-субтитрів-youtube.md  20260602-163519-nitra-cursor-config-compliance.md  20260602-163519-переміщення-stryker-mutator-з-кореневого-package-json-до-app.md  20260602-165929-eec457d3.md  (+50 more)
relay/: CHANGELOG.md  Dockerfile  README.md  jsconfig.json  package.json  stryker.config.mjs  vitest.config.js
scripts/: CHANGELOG.md  docs-regen.js  package.json  stryker.config.mjs  vitest.config.js
(+166 files in other folders)
