[package]
name = "myshare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-http лишився для page-meta (фронтенд робить favicon/title fetch).
# unsafe-headers дозволяє Referer/Origin із JS.
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YouTube captions: persistent client із cookie jar — без cookie persistence
# YouTube блокує innertube/timedtext 403. cookies feature додає Set-Cookie парс.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt"] }
url = "2"
thiserror = "2"
dotenvy = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
