[package]
name = "myshare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-http лишився для page-meta (фронтенд робить favicon/title fetch).
# unsafe-headers дозволяє Referer/Origin із JS.
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
# Shared agent journal + ACP-client commands (plugin:agent|*) — same crate the
# task/mlmail/mikrotik apps use, so the journal/ACP backend isn't copied per
# app. Pinned to a specific rev (not floating) so a future push to the
# package repo can't silently change this app's Rust surface underneath it.
tauri-plugin-agent = { git = "https://github.com/nitra/tauri-components", rev = "73442a5e511eb591b9eeaad98818424bee82e508" }
# OAuth2/PKCE login callback (myshare://oauth/callback) for the sync relay's Ory login.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YouTube captions: persistent client із cookie jar — без cookie persistence
# YouTube блокує innertube/timedtext 403. cookies feature додає Set-Cookie парс.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["macros", "rt"] }
url = "2"
thiserror = "2"
tauri-plugin-mcp-bridge = "0.11.2"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# Стрипаємо debug-символи навіть у debug-збірці: для Android вони роздувають
# .so з ~10 MB корисного коду до ~160 MB. Для локального APK символи не потрібні.
[profile.dev]
strip = true
